.metadata/.plugins/org.eclipse.cdt.ui/Lab-2B.build.log
22:00:12 **** Incremental Build of configuration Debug for project Lab-2B ****
make -j22 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:43:1: error: unknown type name 'UART_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
   43 | UART_HandleTypeDef huart2;
      | ^~~~~~~~~~~~~~~~~~
      | DMA_HandleTypeDef
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:94:3: error: implicit declaration of function 'HAL_UART_Transmit' [-Wimplicit-function-declaration]
   94 |   HAL_UART_Transmit (& huart2, (uint8_t*) welcome, strlen (welcome), HAL_MAX_DELAY);
      |   ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:106:24: error: implicit declaration of function 'HAL_UART_Receive' [-Wimplicit-function-declaration]
  106 |                   if ( HAL_UART_Receive (& huart2 , &rxByte , 1, HAL_MAX_DELAY ) == HAL_OK ) {
      |                        ^~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'MX_USART2_UART_Init':
../Core/Src/main.c:186:9: error: request for member 'Instance' in something not a structure or union
  186 |   huart2.Instance = USART2;
      |         ^
../Core/Src/main.c:187:9: error: request for member 'Init' in something not a structure or union
  187 |   huart2.Init.BaudRate = 115200;
      |         ^
../Core/Src/main.c:188:9: error: request for member 'Init' in something not a structure or union
  188 |   huart2.Init.WordLength = UART_WORDLENGTH_8B;
      |         ^
../Core/Src/main.c:188:28: error: 'UART_WORDLENGTH_8B' undeclared (first use in this function)
  188 |   huart2.Init.WordLength = UART_WORDLENGTH_8B;
      |                            ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:188:28: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:189:9: error: request for member 'Init' in something not a structure or union
  189 |   huart2.Init.StopBits = UART_STOPBITS_1;
      |         ^
../Core/Src/main.c:189:26: error: 'UART_STOPBITS_1' undeclared (first use in this function)
  189 |   huart2.Init.StopBits = UART_STOPBITS_1;
      |                          ^~~~~~~~~~~~~~~
../Core/Src/main.c:190:9: error: request for member 'Init' in something not a structure or union
  190 |   huart2.Init.Parity = UART_PARITY_NONE;
      |         ^
../Core/Src/main.c:190:24: error: 'UART_PARITY_NONE' undeclared (first use in this function)
  190 |   huart2.Init.Parity = UART_PARITY_NONE;
      |                        ^~~~~~~~~~~~~~~~
../Core/Src/main.c:191:9: error: request for member 'Init' in something not a structure or union
  191 |   huart2.Init.Mode = UART_MODE_TX_RX;
      |         ^
../Core/Src/main.c:191:22: error: 'UART_MODE_TX_RX' undeclared (first use in this function)
  191 |   huart2.Init.Mode = UART_MODE_TX_RX;
      |                      ^~~~~~~~~~~~~~~
../Core/Src/main.c:192:9: error: request for member 'Init' in something not a structure or union
  192 |   huart2.Init.HwFlowCtl = UART_HWCONTROL_NONE;
      |         ^
../Core/Src/main.c:192:27: error: 'UART_HWCONTROL_NONE' undeclared (first use in this function)
  192 |   huart2.Init.HwFlowCtl = UART_HWCONTROL_NONE;
      |                           ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:193:9: error: request for member 'Init' in something not a structure or union
  193 |   huart2.Init.OverSampling = UART_OVERSAMPLING_16;
      |         ^
../Core/Src/main.c:193:30: error: 'UART_OVERSAMPLING_16' undeclared (first use in this function)
  193 |   huart2.Init.OverSampling = UART_OVERSAMPLING_16;
      |                              ^~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:194:7: error: implicit declaration of function 'HAL_UART_Init'; did you mean 'HAL_DMA_Init'? [-Wimplicit-function-declaration]
  194 |   if (HAL_UART_Init(&huart2) != HAL_OK)
      |       ^~~~~~~~~~~~~
      |       HAL_DMA_Init
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j22 all" terminated with exit code 2. Build might be incomplete.

22:00:13 Build Failed. 19 errors, 0 warnings. (took 1s.80ms)

